# unpast

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  publish.yml  run-tests-comprehensive.yml  run-tests.yml  run_tests.yml
notebooks/: Generate_simulated_data_and_test_unpast.ipynb  UnPaSt_examples.ipynb  _calc_metrics.ipynb  consensus.ipynb  real_data_benchmark.ipynb
unpast/: run_unpast.py  setup.py
unpast/core/: binarization.py  feature_clustering.py  preprocessing.py  sample_clustering.py
unpast/misc/: consensus.py  ds_synthetic.py  ds_synthetic_builder.py  eval.py  unpast_DE.py
unpast/misc/ds_synthetic/: builder_correlated.py  builder_gene_expr.py  builder_simple.py  dataset.py  ds_utils.py  entry.py
unpast/misc/eval/: __init__.py  _deprecated.py  _unused.py  calc_ari_matching.py  calc_average_precision.py  draft_map_metric.py  map_metric.py  metrics.py  run_eval.py
unpast/tests/: test_run_unpast.py  test_utils.py
unpast/tests/core/: test_binarization.py  test_feature_clustering.py  test_preprocessing.py  test_sample_clustering.py
unpast/tests/misc/: test_ds_synthetic.py  test_ds_synthetic_builder.py  test_eval.py  test_metrics.py
unpast/tests/test_reference_output/: test_reproducible_louvain.biclusters.tsv
unpast/tests/utils/: test_io.py  test_logs.py  test_method.py  test_similarity.py  test_statistics.py
unpast/utils/: consensus.py  eval.py  figs.py  io.py  logs.py  method.py  performance.py  similarity.py  statistics.py  visualization.py
(+3 files in other folders)
