[tool.poetry]
name = "unpast"
version = "0.1.10"
description = "A novel method for unsupervised patient stratification."
authors = ["Olga Zolotareva (ozolotareva)", "Michael Hartung (Maiykol)"]
maintainers = ["Olga Zolotareva (ozolotareva)", "Michael Hartung (Maiykol)", "Alexey Savchik (savfod)", "Yuliya Burankova (freddsle)"]
license = "GPL-3.0"
readme = "README.md"
packages = [{ include = "unpast" }]
repository = "https://github.com/ozolotareva/unpast"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fisher = ">=0.1.9,<=0.1.14"
pandas = "1.5"
python-louvain = "0.15"
matplotlib = "3.7.1"
seaborn = "0.11.1"
numpy = "1.25"
scikit-learn = "1.2.2"
scikit-network = ">=0.33"
scipy = ">=1.7.1,<1.11"
statsmodels = "0.14"
lifelines = "0.27.4"
pytest = "^8.3.3"
cython = "^0.29.36"
kneed = "^0.8.5"

[tool.poetry.scripts]
unpast = "unpast.run_unpast:main"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "plot: marks tests that generate plots (deselect with '-m \"not plot\"')"
]
